[TTB-005] required refactors done, integration tests added